fix event header overflow breaking large screens

--- a/web/wp-content/themes/FoundationPress-master/src/assets/scss/modules/_event-menu.scss
+++ b/web/wp-content/themes/FoundationPress-master/src/assets/scss/modules/_event-menu.scss
@@ -48,8 +48,11 @@
 .event-menu {
   clear: both;
   background-color: inherit;
-  max-height: 80vh;
-  overflow: auto;
+
+  @include breakpoint(medium down) {
+    max-height: 80vh;
+    overflow: auto;
+  }
 
   ul, li { background-color: inherit; }
 
